--- a/pod/templates/mypicks.html
+++ b/pod/templates/mypicks.html
@@ -1,155 +1,157 @@
 {% extends "layout.html" %}
 {% block content1  %}
 <div class="pb-2">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<h2 class="display-4 mb-4">{{current_user.firstname}}'s Picks</h2>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <h2 class="display-4 mb-4">{{current_user.firstname}}'s Picks</h2>
 
 
-<form id="pick-form" class="needs-validation" action="" method="POST" role = "form" novalidate>
-<input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+  <form id="pick-form" class="needs-validation" action="" method="POST" role="form" novalidate>
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
 
-<div id="subforms-container" class="">
-    <div id="pick-0-form" class="subform form-group pb-1" data-index="0">
+    <div id="subforms-container" class="">
+      <div id="pick-0-form" class="subform form-group pb-1" data-index="0">
         <div class="form-row">
-            <div class="col-5">
-                <label for="picks-0-sport">League</label>
-                <select class="form-control sport" id="picks-0-sport" name="picks-0-sport">
-                    <option value="MLB">MLB</option>
-                    <option value="NBA">NBA</option>
-                    <option value="NCAAB">NCAAB</option>
-                    <option value="NCAAF">NCAAF</option>
-                    <option value="NFL">NFL</option>
-                    <option value="NHL">NHL</option>
-                </select>
-            </div>
-            <div class="col-5">
-                <label for="picks-0-team">Team</label>
-                <select class="form-control team" id="picks-0-team" name="picks-0-team">
-                    <option value="Arizona Diamondbacks">Arizona Diamondbacks</option>
-                    <option value="Atlanta Braves">Atlanta Braves</option>
-                    <option value="Baltimore Orioles">Baltimore Orioles</option>
-                    <option value="Boston Red Sox">Boston Red Sox</option>
-                    <option value="Chicago Cubs">Chicago Cubs</option>
-                    <option value="Chicago White Sox">Chicago White Sox</option>
-                    <option value="Cincinnati Reds">Cincinnati Reds</option>
-                    <option value="Cleveland Indians">Cleveland Indians</option>
-                    <option value="Colorado Rockies">Colorado Rockies</option>
-                    <option value="Detroit Tigers">Detroit Tigers</option>
-                    <option value="Houston Astros">Houston Astros</option>
-                    <option value="Kansas City Royals">Kansas City Royals</option>
-                    <option value="Los Angeles Angels">Los Angeles Angels</option>
-                    <option value="Los Angeles Dodgers">Los Angeles Dodgers</option>
-                    <option value="Miami Marlins">Miami Marlins</option>
-                    <option value="Milwaukee Brewers">Milwaukee Brewers</option>
-                    <option value="Minnesota Twins">Minnesota Twins</option>
-                    <option value="New York Mets">New York Mets</option>
-                    <option value="New York Yankees">New York Yankees</option>
-                    <option value="Oakland Athletics">Oakland Athletics</option>
-                    <option value="Philadelphia Phillies">Philadelphia Phillies</option>
-                    <option value="Pittsburgh Pirates">Pittsburgh Pirates</option>
-                    <option value="San Diego Padres">San Diego Padres</option>
-                    <option value="San Francisco Giants">San Francisco Giants</option>
-                    <option value="Seattle Mariners">Seattle Mariners</option>
-                    <option value="St. Louis Cardinals">St. Louis Cardinals</option>
-                    <option value="Tampa Bay Rays">Tampa Bay Rays</option>
-                    <option value="Texas Rangers">Texas Rangers</option>
-                    <option value="Toronto Blue Jays">Toronto Blue Jays</option>
-                    <option value="Washington Nationals">Washington Nationals</option>
-                </select>
-            </div>
+          <div class="col-5">
+            <label for="picks-0-sport">League</label>
+            <select class="form-control sport" id="picks-0-sport" name="picks-0-sport">
+              <option value="MLB">MLB</option>
+              <option value="NBA">NBA</option>
+              <option value="NCAAB">NCAAB</option>
+              <option value="NCAAF">NCAAF</option>
+              <option value="NFL">NFL</option>
+              <option value="NHL">NHL</option>
+            </select>
+          </div>
+          <div class="col-5">
+            <label for="picks-0-team">Team</label>
+            <select class="form-control team" id="picks-0-team" name="picks-0-team">
+              <option value="Arizona Diamondbacks">Arizona Diamondbacks</option>
+              <option value="Atlanta Braves">Atlanta Braves</option>
+              <option value="Baltimore Orioles">Baltimore Orioles</option>
+              <option value="Boston Red Sox">Boston Red Sox</option>
+              <option value="Chicago Cubs">Chicago Cubs</option>
+              <option value="Chicago White Sox">Chicago White Sox</option>
+              <option value="Cincinnati Reds">Cincinnati Reds</option>
+              <option value="Cleveland Indians">Cleveland Indians</option>
+              <option value="Colorado Rockies">Colorado Rockies</option>
+              <option value="Detroit Tigers">Detroit Tigers</option>
+              <option value="Houston Astros">Houston Astros</option>
+              <option value="Kansas City Royals">Kansas City Royals</option>
+              <option value="Los Angeles Angels">Los Angeles Angels</option>
+              <option value="Los Angeles Dodgers">Los Angeles Dodgers</option>
+              <option value="Miami Marlins">Miami Marlins</option>
+              <option value="Milwaukee Brewers">Milwaukee Brewers</option>
+              <option value="Minnesota Twins">Minnesota Twins</option>
+              <option value="New York Mets">New York Mets</option>
+              <option value="New York Yankees">New York Yankees</option>
+              <option value="Oakland Athletics">Oakland Athletics</option>
+              <option value="Philadelphia Phillies">Philadelphia Phillies</option>
+              <option value="Pittsburgh Pirates">Pittsburgh Pirates</option>
+              <option value="San Diego Padres">San Diego Padres</option>
+              <option value="San Francisco Giants">San Francisco Giants</option>
+              <option value="Seattle Mariners">Seattle Mariners</option>
+              <option value="St. Louis Cardinals">St. Louis Cardinals</option>
+              <option value="Tampa Bay Rays">Tampa Bay Rays</option>
+              <option value="Texas Rangers">Texas Rangers</option>
+              <option value="Toronto Blue Jays">Toronto Blue Jays</option>
+              <option value="Washington Nationals">Washington Nationals</option>
+            </select>
+          </div>
         </div>
         <div class="form-row">
-            <div class="col-5">
-                <label for="picks-0-linetype">Line Type</label>
-                <select class="form-control linetype" id="picks-0-linetype" name="picks-0-linetype">
-                    <option value="Spread">Spread</option>
-                    <option value="MoneyLine">MoneyLine</option>
-                    <option value="Over/Under">Over/Under</option>
-                    <option value="Prop">Prop</option>
-                </select>
-            </div>
-            <div class="col-5">
-                <label for="picks-0-line">Line</label>
-                <input class="form-control line" id="picks-0-line" name="picks-0-line" type="text" value="" pattern="(^[-+]?[1-9]\d*(\.5)?$)" required>
-                <div class="invalid-feedback">Invalid Spread: e.g. 34, -3.5, +3 </div>
-            </div>
+          <div class="col-5">
+            <label for="picks-0-linetype">Line Type</label>
+            <select class="form-control linetype" id="picks-0-linetype" name="picks-0-linetype">
+              <option value="Spread">Spread</option>
+              <option value="MoneyLine">MoneyLine</option>
+              <option value="Over/Under">Over/Under</option>
+              <option value="Prop">Prop</option>
+            </select>
+          </div>
+          <div class="col-5">
+            <label for="picks-0-line">Line</label>
+            <input class="form-control line" id="picks-0-line" name="picks-0-line" type="text" value=""
+              pattern="(^[-+]?[1-9]\d*(\.5)?$)" required>
+            <div class="invalid-feedback">Invalid Spread: e.g. 34, -3.5, +3 </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-<button type="button" id="add" class="btn btn-secondary">Add Parlay Leg</button>
-<button type="submit" class="btn btn-success">Submit Pick</button>
-</form>
+    <button type="button" id="add" class="btn btn-secondary">Add Parlay Leg</button>
+    <button type="submit" class="btn btn-success">Submit Pick</button>
+  </form>
 </div>
 
 {# Form template #}
 <div id="pick-_-form" class="is-hidden form-group pt-1 pb-2 border-top" data-index="_">
-    <div class="form-row">
-        <div class="col-5">
-            <label for="picks-_-sport">League</label>
-            <select class="form-control sport" id="picks-_-sport" name="picks-_-sport">
-                <option value="MLB">MLB</option>
-                <option value="NBA">NBA</option>
-                <option value="NCAAB">NCAAB</option>
-                <option value="NCAAF">NCAAF</option>
-                <option value="NFL">NFL</option>
-                <option value="NHL">NHL</option>
-            </select>
-        </div>
-        <div class="col-5">
-            <label for="picks-_-team">Team</label>
-            <select class="form-control team" id="picks-_-team" name="picks-_-team">
-                <option value="Arizona Diamondbacks">Arizona Diamondbacks</option>
-                <option value="Atlanta Braves">Atlanta Braves</option>
-                <option value="Baltimore Orioles">Baltimore Orioles</option>
-                <option value="Boston Red Sox">Boston Red Sox</option>
-                <option value="Chicago Cubs">Chicago Cubs</option>
-                <option value="Chicago White Sox">Chicago White Sox</option>
-                <option value="Cincinnati Reds">Cincinnati Reds</option>
-                <option value="Cleveland Indians">Cleveland Indians</option>
-                <option value="Colorado Rockies">Colorado Rockies</option>
-                <option value="Detroit Tigers">Detroit Tigers</option>
-                <option value="Houston Astros">Houston Astros</option>
-                <option value="Kansas City Royals">Kansas City Royals</option>
-                <option value="Los Angeles Angels">Los Angeles Angels</option>
-                <option value="Los Angeles Dodgers">Los Angeles Dodgers</option>
-                <option value="Miami Marlins">Miami Marlins</option>
-                <option value="Milwaukee Brewers">Milwaukee Brewers</option>
-                <option value="Minnesota Twins">Minnesota Twins</option>
-                <option value="New York Mets">New York Mets</option>
-                <option value="New York Yankees">New York Yankees</option>
-                <option value="Oakland Athletics">Oakland Athletics</option>
-                <option value="Philadelphia Phillies">Philadelphia Phillies</option>
-                <option value="Pittsburgh Pirates">Pittsburgh Pirates</option>
-                <option value="San Diego Padres">San Diego Padres</option>
-                <option value="San Francisco Giants">San Francisco Giants</option>
-                <option value="Seattle Mariners">Seattle Mariners</option>
-                <option value="St. Louis Cardinals">St. Louis Cardinals</option>
-                <option value="Tampa Bay Rays">Tampa Bay Rays</option>
-                <option value="Texas Rangers">Texas Rangers</option>
-                <option value="Toronto Blue Jays">Toronto Blue Jays</option>
-                <option value="Washington Nationals">Washington Nationals</option>
-            </select>
-        </div>
+  <div class="form-row">
+    <div class="col-5">
+      <label for="picks-_-sport">League</label>
+      <select class="form-control sport" id="picks-_-sport" name="picks-_-sport">
+        <option value="MLB">MLB</option>
+        <option value="NBA">NBA</option>
+        <option value="NCAAB">NCAAB</option>
+        <option value="NCAAF">NCAAF</option>
+        <option value="NFL">NFL</option>
+        <option value="NHL">NHL</option>
+      </select>
     </div>
-    <div class="form-row">
-        <div class="col-5">
-            <label  for="picks-_-linetype">Line Type</label>
-            <select class="form-control linetype" id="picks-_-linetype" name="picks-_-linetype">
-                <option value="Spread">Spread</option>
-                <option value="MoneyLine">MoneyLine</option>
-                <option value="Over/Under">Over/Under</option>
-                <option value="Prop">Prop</option>
-            </select>
-        </div>
-        <div class="col-5">
-            <label class = 'label'for="picks-_-line">Line</label>
-            <input class="form-control line" id="picks-_-line" name="picks-_-line" type="text" value="" pattern="(^[-+]?[1-9]\d*(\.5)?$)" required>
-            <div class="invalid-feedback">Invalid Spread: e.g. 34, -3.5, +3 </div>
-        </div>
-        <div class="col-2">
-          <button type="button" class="btn btn-danger remove">Delete Leg</button>
-        </div>
+    <div class="col-5">
+      <label for="picks-_-team">Team</label>
+      <select class="form-control team" id="picks-_-team" name="picks-_-team">
+        <option value="Arizona Diamondbacks">Arizona Diamondbacks</option>
+        <option value="Atlanta Braves">Atlanta Braves</option>
+        <option value="Baltimore Orioles">Baltimore Orioles</option>
+        <option value="Boston Red Sox">Boston Red Sox</option>
+        <option value="Chicago Cubs">Chicago Cubs</option>
+        <option value="Chicago White Sox">Chicago White Sox</option>
+        <option value="Cincinnati Reds">Cincinnati Reds</option>
+        <option value="Cleveland Indians">Cleveland Indians</option>
+        <option value="Colorado Rockies">Colorado Rockies</option>
+        <option value="Detroit Tigers">Detroit Tigers</option>
+        <option value="Houston Astros">Houston Astros</option>
+        <option value="Kansas City Royals">Kansas City Royals</option>
+        <option value="Los Angeles Angels">Los Angeles Angels</option>
+        <option value="Los Angeles Dodgers">Los Angeles Dodgers</option>
+        <option value="Miami Marlins">Miami Marlins</option>
+        <option value="Milwaukee Brewers">Milwaukee Brewers</option>
+        <option value="Minnesota Twins">Minnesota Twins</option>
+        <option value="New York Mets">New York Mets</option>
+        <option value="New York Yankees">New York Yankees</option>
+        <option value="Oakland Athletics">Oakland Athletics</option>
+        <option value="Philadelphia Phillies">Philadelphia Phillies</option>
+        <option value="Pittsburgh Pirates">Pittsburgh Pirates</option>
+        <option value="San Diego Padres">San Diego Padres</option>
+        <option value="San Francisco Giants">San Francisco Giants</option>
+        <option value="Seattle Mariners">Seattle Mariners</option>
+        <option value="St. Louis Cardinals">St. Louis Cardinals</option>
+        <option value="Tampa Bay Rays">Tampa Bay Rays</option>
+        <option value="Texas Rangers">Texas Rangers</option>
+        <option value="Toronto Blue Jays">Toronto Blue Jays</option>
+        <option value="Washington Nationals">Washington Nationals</option>
+      </select>
     </div>
+  </div>
+  <div class="form-row">
+    <div class="col-5">
+      <label for="picks-_-linetype">Line Type</label>
+      <select class="form-control linetype" id="picks-_-linetype" name="picks-_-linetype">
+        <option value="Spread">Spread</option>
+        <option value="MoneyLine">MoneyLine</option>
+        <option value="Over/Under">Over/Under</option>
+        <option value="Prop">Prop</option>
+      </select>
+    </div>
+    <div class="col-5">
+      <label class='label' for="picks-_-line">Line</label>
+      <input class="form-control line" id="picks-_-line" name="picks-_-line" type="text" value=""
+        pattern="(^[-+]?[1-9]\d*(\.5)?$)" required>
+      <div class="invalid-feedback">Invalid Spread: e.g. 34, -3.5, +3 </div>
+    </div>
+    <div class="col-2">
+      <button type="button" class="btn btn-danger remove">Delete Leg</button>
+    </div>
+  </div>
 </div>
 
 
@@ -170,48 +172,48 @@
       <th scope="col">Team</th>
       <th scope="col">Line</th>
     </thead>
-      {% set skip_list = [] %}
-      {% for pick in picks %}
-        {# If we have already seen this pick from another member of the parlay, don't print it #}
-        {% if pick.id in skip_list %}
-        {# Do nothing #}
-        {% else %}
-          {# If it's not a parlayed pick print it normally #}
-          {% if pick.parlay_id == None %}
-            <tr>
-              <td>{{pick.sport}}</td>
-              <td>{{pick.linetype}}</td>
-              <td>{{pick.team}}</td>
-              <td>{{pick.line}}</td>
-            </tr>
-          {# Else, print out the paylayed pick and add the other members to the skip_list #}
-          {% else %}
-          <tr>
-            <td>
-              {% for parpick in pick.parlayobj.picks %}
-                <div>{{parpick.sport}}</div>
-                {% do skip_list.append(parpick.id) %}
-              {% endfor %}
-            </td>
-            <td>
-              {% for parpick in pick.parlayobj.picks %}
-                <div>{{parpick.linetype}}</div>
-              {% endfor %}
-            </td>
-            <td>
-              {% for parpick in pick.parlayobj.picks %}
-                <div>{{parpick.team}}</div>
-              {% endfor %}
-            </td>
-            <td>
-              {% for parpick in pick.parlayobj.picks %}
-                <div>{{parpick.line}}</div>
-              {% endfor %}
-            </td>
-          </tr>
-          {% endif %}
-        {% endif %}
-      {% endfor %}
+    {% set skip_list = [] %}
+    {% for pick in picks %}
+    {# If we have already seen this pick from another member of the parlay, don't print it #}
+    {% if pick.id in skip_list %}
+    {# Do nothing #}
+    {% else %}
+    {# If it's not a parlayed pick print it normally #}
+    {% if pick.parlay_id == None %}
+    <tr>
+      <td>{{pick.sport}}</td>
+      <td>{{pick.linetype}}</td>
+      <td>{{pick.team}}</td>
+      <td>{{pick.line}}</td>
+    </tr>
+    {# Else, print out the paylayed pick and add the other members to the skip_list #}
+    {% else %}
+    <tr>
+      <td>
+        {% for parpick in pick.parlayobj.picks %}
+        <div>{{parpick.sport}}</div>
+        {% do skip_list.append(parpick.id) %}
+        {% endfor %}
+      </td>
+      <td>
+        {% for parpick in pick.parlayobj.picks %}
+        <div>{{parpick.linetype}}</div>
+        {% endfor %}
+      </td>
+      <td>
+        {% for parpick in pick.parlayobj.picks %}
+        <div>{{parpick.team}}</div>
+        {% endfor %}
+      </td>
+      <td>
+        {% for parpick in pick.parlayobj.picks %}
+        <div>{{parpick.line}}</div>
+        {% endfor %}
+      </td>
+    </tr>
+    {% endif %}
+    {% endif %}
+    {% endfor %}
   </table>
 </div>
 
